[gd_scene load_steps=4 format=3 uid="uid://qna1jwrlq4dl"]

[ext_resource type="Script" uid="uid://f333amgg3be3" path="res://main_controller.gd" id="1_uu6xs"]
[ext_resource type="PackedScene" uid="uid://bldjawb1maw2x" path="res://scenes/ui/DeploymentScreen.tscn" id="2_r0du0"]
[ext_resource type="PackedScene" uid="uid://c74uoaliwxt4l" path="res://scenes/3d/Console3D.tscn" id="2_uu6xs"]

[node name="Main" type="Node2D"]
script = ExtResource("1_uu6xs")

[node name="UILayer" type="CanvasLayer" parent="."]
visible = false

[node name="MasterLayout" type="HBoxContainer" parent="UILayer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LeftColumn" type="VBoxContainer" parent="UILayer/MasterLayout"]
unique_name_in_owner = true
custom_minimum_size = Vector2(365, 0)
layout_mode = 2
mouse_filter = 2

[node name="AvatarTopLeft_Spacer" type="Control" parent="UILayer/MasterLayout/LeftColumn"]
custom_minimum_size = Vector2(300, 275)
layout_mode = 2
mouse_filter = 2

[node name="EnemyPanel_TopLeft" type="VBoxContainer" parent="UILayer/MasterLayout/LeftColumn"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="AvatarBottomLeft_Spacer" type="Control" parent="UILayer/MasterLayout/LeftColumn"]
custom_minimum_size = Vector2(300, 285)
layout_mode = 2
mouse_filter = 2

[node name="EnemyPanel_BottomLeft" type="VBoxContainer" parent="UILayer/MasterLayout/LeftColumn"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="EndTurn_Button_Spacer" type="Control" parent="UILayer/MasterLayout/LeftColumn"]
custom_minimum_size = Vector2(300, 22)
layout_mode = 2
mouse_filter = 2

[node name="EndTurn_Button" type="Button" parent="UILayer/MasterLayout/LeftColumn"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
size_flags_horizontal = 4
text = "END TURN"

[node name="CenterColumn" type="VBoxContainer" parent="UILayer/MasterLayout"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="TopSpacer" type="Control" parent="UILayer/MasterLayout/CenterColumn"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="PlayerControl_Bottom" type="PanelContainer" parent="UILayer/MasterLayout/CenterColumn"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 310)
layout_mode = 2
size_flags_vertical = 8

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/MasterLayout/CenterColumn/PlayerControl_Bottom"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 50

[node name="ActionButtons" type="HBoxContainer" parent="UILayer/MasterLayout/CenterColumn/PlayerControl_Bottom/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 8

[node name="PlayerStats" type="Panel" parent="UILayer/MasterLayout/CenterColumn/PlayerControl_Bottom/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/MasterLayout/CenterColumn/PlayerControl_Bottom/HBoxContainer/PlayerStats"]
unique_name_in_owner = true
custom_minimum_size = Vector2(370, 260)
layout_mode = 0
offset_right = 370.0
offset_bottom = 260.0

[node name="PlayerTreasuryLabel" type="Label" parent="UILayer/MasterLayout/CenterColumn/PlayerControl_Bottom/HBoxContainer/PlayerStats/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PlayerMoraleLabel" type="Label" parent="UILayer/MasterLayout/CenterColumn/PlayerControl_Bottom/HBoxContainer/PlayerStats/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PlayerAPLabel" type="Label" parent="UILayer/MasterLayout/CenterColumn/PlayerControl_Bottom/HBoxContainer/PlayerStats/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="RightColumn" type="VBoxContainer" parent="UILayer/MasterLayout"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="AvatarTopRight_Spacer" type="Control" parent="UILayer/MasterLayout/RightColumn"]
custom_minimum_size = Vector2(300, 275)
layout_mode = 2
mouse_filter = 2

[node name="EnemyPanel_TopRight" type="VBoxContainer" parent="UILayer/MasterLayout/RightColumn"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
mouse_filter = 2

[node name="AvatarBottomRight_Spacer" type="Control" parent="UILayer/MasterLayout/RightColumn"]
custom_minimum_size = Vector2(300, 285)
layout_mode = 2
mouse_filter = 2

[node name="EnemyPanel_BottomRight" type="VBoxContainer" parent="UILayer/MasterLayout/RightColumn"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
mouse_filter = 2

[node name="GameLog_Spacer" type="Control" parent="UILayer/MasterLayout/RightColumn"]
custom_minimum_size = Vector2(300, 45)
layout_mode = 2
mouse_filter = 2

[node name="GameLog_Container" type="PanelContainer" parent="UILayer/MasterLayout/RightColumn"]
unique_name_in_owner = true
custom_minimum_size = Vector2(575, 220)
layout_mode = 2

[node name="GameLog" type="RichTextLabel" parent="UILayer/MasterLayout/RightColumn/GameLog_Container"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="DeploymentScreen" parent="UILayer" instance=ExtResource("2_r0du0")]
unique_name_in_owner = true
visible = false

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Console3D" parent="SubViewportContainer/SubViewport" instance=ExtResource("2_uu6xs")]
